
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct hostent {int h_length; int h_addr; } ;


 int ERR_GETIP ;
 int QUIT (int ) ;
 struct hostent* gethostbyname (char*) ;
 long inet_addr (char*) ;
 int memcpy (long*,int ,int ) ;

long getip(char * hostname)
{
    struct hostent * p_hostent;
    long ipaddr;

    ipaddr = inet_addr( hostname );
    if (ipaddr < 0)
        {
            p_hostent = gethostbyname(hostname);
            if (p_hostent == ((void*)0))
                QUIT(ERR_GETIP);
            memcpy( &ipaddr, p_hostent->h_addr, p_hostent->h_length );
        }
    return(ipaddr);
}
